--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" href="./binaryCalculator.css" type="text/css">
     </head>
     <body>
-        <div id='res'>Result</div>
-        <container id='btns'>
+        <div id='res'></div>
+        <div id='btns'>
         <button id='btn0'>0</button>
         <button id='btn1'>1</button>
         <button id='btnClr'>C</button>
@@ -17,19 +17,7 @@
         <button id='btnSub'>-</button>
         <button id='btnMul'>*</button>
         <button id='btnDiv'>/</button>
-        </container>
+        </div>
         <script src="./binaryCalculator.js" type="text/javascript"></script>
     </body>
 </html>
-<!--    
-res    Contains the result of button presses.
-btns    A button container that displays all eight calculator buttons.
-0    btn0    A button expressing binary digit .
-1    btn1    A button expressing binary digit .
-C    btnClr    A button to clear the contents of .
-=    btnEql    A button to evaluate the contents of the expression in .
-+    btnSum    A button for the addition operation.
--    btnSub    A button for the subtraction operation.
-*    btnMul    A button for the multiplication operation.
-/    btnDiv    A button for the integer division operation.
--->
